--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,9 +24,12 @@ jobs:
       fail-fast: false
 
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        arch: [x64, x86]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        os: [ubuntu-latest]
+        arch: [x64]
+        python-version: ["3.7"]
+        #os: [ubuntu-latest, windows-latest, macOS-latest]
+        #arch: [x64, x86]
+        #python-version: ["3.7", "3.8", "3.9", "3.10"]
 
         exclude:
           - os: macOS-latest
