--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,10 @@ jobs:
         codecov-version: '1.7'
 
     steps:
-      - name: Check out code
+
+      # --- Check out code and setup Python
+
+      - name: Check out repository
         uses: actions/checkout@v3
 
       - name: Set up Python {{ matrix.python-version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -50,11 +53,34 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install flake8 pytest
-#          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      # --- Install Poetry
+
+      - name: Load cached $HOME/.local
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.local
+          key: dotlocal-${{ runner.os }}-${{ hashFiles('.github/workflows/CI.yml') }}
+
+      - name: Install Python poetry
+        uses: snok/install-poetry@v1
+
+      # --- Install package dependencies
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/CI.yml') }}
+
+      - name: Install package dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+      # --- Run tests
+
+      - name: Run tests
+        run: tox -e py
 
 #      - name: Lint with flake8
 #        run: |
@@ -66,10 +92,3 @@ jobs:
 #      - name: Test with pytest
 #        run: |
 #          pytest
-
-      - name: Install tox
-        run: pip install tox
-
-      - name: Run tox
-        # Run tox using the version of Python in `PATH`
-        run: tox -e py
