--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = ["Your Name <your.name@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.7.2"
 python-slugify = "^6.1.2"
+PyYAML = "^6.0"
 
 [tool.poetry.group.docs.dependencies]
 pdoc3 = "^0.10.0"
