--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,11 +24,8 @@ jobs:
       fail-fast: false
 
       matrix:
-        os: [ubuntu-latest]
-        arch: [x64]
-        #python-version: ["3.7"]
-        #os: [ubuntu-latest, windows-latest, macOS-latest]
-        #arch: [x64, x86]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        arch: [x64, x86]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
         exclude:
@@ -87,15 +84,3 @@ jobs:
         run: |
           source .venv/bin/activate
           poetry run pytest src/ tests/
-          #tox -e py
-
-#      - name: Lint with flake8
-#        run: |
-#          # stop the build if there are Python syntax errors or undefined names
-#          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-#          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-#      - name: Test with pytest
-#        run: |
-#          pytest
