Debug CI workflow.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,8 @@ jobs:
         exclude:
           - os: macOS-latest
             arch: x86
+          - os: windows-latest
+            python-version: ["3.7", "3.8"]
 
     defaults:
       run:
