Debug CI workflows.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,9 @@ jobs:
           - os: macOS-latest
             arch: x86
           - os: windows-latest
-            python-version: ["3.7", "3.8"]
+            python-version: "3.7"
+          - os: windows-latest
+            python-version: "3.8"
 
     defaults:
       run:
