Simplify job names in CI workflow.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   build:
-    name: Python ${{ matrix.python-version }} (${{ matrix.os }}, ${{ matrix.arch }}, ${{ github.event_name }})
+    name: Python ${{ matrix.python-version }} (${{ matrix.os }}, ${{ matrix.arch }})
 
     strategy:
       fail-fast: false
