--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -90,6 +90,14 @@ jobs:
 
       - name: Run tests
         run: |
-          #source .venv/bin/activate
           source $VENV
-          poetry run pytest src/ tests/
+          poetry run pytest --cov-report=xml
+
+      # --- Upload coverage statistics
+
+      - name: Upload coverage
+        uses: codecov/codecov-action@v3
+        with:
+          # token: ${{ secrets.CODECOV_TOKEN }}  # Only required for private repositories
+          file: ./coverage.xml
+          fail_ci_if_error: true
