--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -101,7 +101,7 @@ jobs:
             github.ref_name == 'main' &&
             runner.os == 'Linux' &&
             matrix.arch == env.codecov-arch &&
-            matrix.version == env.codecov-version
+            matrix.python-version == env.codecov-version
 
         uses: codecov/codecov-action@v3
         with:
