--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,11 @@ repos:
       hooks:
         - id: black
           name: black
-          entry: if black
-          language: system
+          entry: black
+          language: python
           files: r"*.py"
         - id: flake8
           name: flake8
           entry: flake8
-          language: system
+          language: python
           files: r"*.py"
