--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
     - repo: local
       hooks:
-        - id: black
-          name: black
-          entry: black
-          language: python
-          files: r"*.py$"
+        #        - id: black
+        #  name: black
+        #  entry: black
+        #  language: python
+        #  files: r"[\S\s]*.py$"
         - id: flake8
           name: flake8
           entry: flake8
           language: python
-          files: r"*.py$"
+          files: r"[\S\s]*.py$"
