--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,4 @@ repos:
           name: flake8
           entry: flake8
           language: python
-          files: r"^\S*$"
+          files: ".py"
