--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 repos:
     - repo: local
       hooks:
-        #        - id: black
-        #  name: black
-        #  entry: black
-        #  language: python
-        #  files: r"[\S\s]*.py$"
+        - id: black
+          name: black
+          entry: black
+          language: python
+          files: ".py"
         - id: flake8
           name: flake8
           entry: flake8
