--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,21 @@
 repos:
+  #    - repo: https://github.com/psf/black
+  #    rev: 19.10b0
+  #    hooks:
+  #      - id: black
+  #  - repo: https://github.com/pre-commit/pre-commit-hooks
+  #    rev: v2.5.0
+  #    hooks:
+  #      - id: check-added-large-files
     - repo: local
       hooks:
         - id: black
           name: black
           entry: black
           language: python
-          files: ".py"
+          files: ".py$"
         - id: flake8
           name: flake8
           entry: flake8
           language: python
-          files: ".py"
+          files: ".py$"
