--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,9 +13,9 @@ repos:
           name: black
           entry: black
           language: python
-          files: r"^\s*.py$"
+          files: ".py"
         - id: flake8
           name: flake8
           entry: flake8
           language: python
-          files: ".py$"
+          files: ".py"
