--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
           name: black
           entry: black
           language: python
-          files: ".py"
+          files: .py
         - id: flake8
           name: flake8
           entry: flake8
