--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,32 @@
 repos:
-  #    - repo: https://github.com/psf/black
-  #    rev: 19.10b0
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+      - id: black
+  - repo: https://github.com/pycqa/flake8
+    rev: 5.0.0
+    hooks:
+    -   id: flake8
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.5.0
+    hooks:
+    - id: check-added-large-files
+    - id: check-docstring-first
+    - id: detect-aws-credentials
+    - id: detect-private-key
+    - id: end-of-file-fixer
+    - id: mixed-line-ending
+    - id: no-commit-to-branch
+    - id: pretty-format-json
+  #    - repo: local
   #    hooks:
   #      - id: black
-  #  - repo: https://github.com/pre-commit/pre-commit-hooks
-  #    rev: v2.5.0
-  #    hooks:
-  #      - id: check-added-large-files
-    - repo: local
-      hooks:
-        - id: black
-          name: black
-          entry: black
-          language: python
-          files: .py
-        - id: flake8
-          name: flake8
-          entry: flake8
-          language: python
-          files: .py
+  #        name: black
+  #        entry: black
+  #        language: python
+  #        files: .py
+  #      - id: flake8
+  #        name: flake8
+  #        entry: flake8
+  #        language: python
+  #        files: .py
