--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,8 @@ repos:
   - repo: https://github.com/pycqa/flake8
     rev: 5.0.0
     hooks:
-    -   id: flake8
+    - id: flake8
+      args: [--config, .flake8]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
