--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,15 +19,15 @@ repos:
     - id: mixed-line-ending
     - id: no-commit-to-branch
     - id: pretty-format-json
-  #    - repo: local
-  #    hooks:
+  - repo: local
+    hooks:
   #      - id: black
   #        name: black
   #        entry: black
   #        language: python
   #        files: .py
-  #      - id: flake8
-  #        name: flake8
-  #        entry: flake8
-  #        language: python
-  #        files: .py
+    - id: flake8
+      name: flake8
+      entry: flake8
+      language: python
+      types: [python]
