--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: 5.0.0
     hooks:
     - id: flake8
-      args: [--config, .flake8]
+      args: [--config, ./.flake8]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
@@ -19,15 +19,15 @@ repos:
     - id: mixed-line-ending
     - id: no-commit-to-branch
     - id: pretty-format-json
-  - repo: local
-    hooks:
+  #- repo: local
+  # hooks:
   #      - id: black
   #        name: black
   #        entry: black
   #        language: python
   #        files: .py
-    - id: flake8
-      name: flake8
-      entry: flake8
-      language: python
-      types: [python]
+  #  - id: flake8
+  #    name: flake8
+  #    entry: flake8
+  #    language: python
+  #    types: [python]
