--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: 5.0.0
     hooks:
     - id: flake8
-      args: [--config, ./.flake8]
+      args: [--config, .flake8]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
