--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,4 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 22.10.0
-    hooks:
-      - id: black
-  - repo: https://github.com/pycqa/flake8
-    rev: 5.0.0
-    hooks:
-    - id: flake8
-      args: [--config, .flake8]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
@@ -19,15 +10,24 @@ repos:
     - id: mixed-line-ending
     - id: no-commit-to-branch
     - id: pretty-format-json
-  #- repo: local
-  # hooks:
-  #      - id: black
-  #        name: black
-  #        entry: black
-  #        language: python
-  #        files: .py
+  - repo: local
+    hooks:
+    - id: black
+      name: black
+      entry: black
+      language: python
+      types: [python]
+    - id: flake8
+      name: flake8
+      entry: flake8
+      language: python
+      types: [python]
+  #- repo: https://github.com/psf/black
+  #  rev: 22.10.0
+  #  hooks:
+  #    - id: black
+  #- repo: https://github.com/pycqa/flake8
+  #  rev: 5.0.0
+  #  hooks:
   #  - id: flake8
-  #    name: flake8
-  #    entry: flake8
-  #    language: python
-  #    types: [python]
+  #    args: [--config, .flake8]
